# MediaPreviewer

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ConfirmDialog.vue  ContextMenu.vue  CurrentZoomSelector.vue  EmptyState.vue  FileCard.vue  FileInfoPanel.vue  PreviewModal.vue  Sidebar.vue  ZoomStepSelector.vue
src/composables/: usePreview.ts  useRecentFolders.ts  useSettings.ts  useThumbnail.ts  useWindowState.ts  useZoom.ts
src/constants/: index.ts
src/types/: index.ts
src/utils/: index.ts  logger.ts
