[package]
name = "media-previewer"
version = "0.2.0"
description = "A media file previewer"
authors = ["you"]
edition = "2021"

[lib]
name = "media_previewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
png = "0.17"
tokio = { version = "1", features = ["rt-multi-thread"] }
image = "0.25"
log = "0.4"
fern = { version = "0.7", features = ["colored"] }
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }
